--- a/idrac_os_deployment.yml
+++ b/idrac_os_deployment.yml
@@ -12,6 +12,6 @@
         protocol: http
         hostname: 100.100.28.4
         iso_path: /omam/raj/sourcehttps
-        iso_name: VMware-VMvisor-Installer-8.0.0-20513097.x86_64-Dell_Customized-A00.iso
+        iso_name: Custom_ESXi_8.0.0.iso
         is_custom_iso: true
        os_deployment_timeout: 15
