--- a/idrac_os_deployment_http.yml
+++ b/idrac_os_deployment_http.yml
@@ -12,6 +12,11 @@
         protocol: http
         hostname: "{{ source_hostname }}"
         iso_path: /omam/raj/sourcehttps
-        iso_name: Custom_ESXi_8.0.0.iso
-        is_custom_iso: true
+        iso_name: VMware-VMvisor-Installer-8.0.0-20513097.x86_64-Dell_Customized-A00.iso
+       destination:
+        protocol: http
+        hostname: "{{ destination_hostname }}"
+        iso_path: /omam/raj/destinationhttps
+        mountpoint: C:/omam_test/omam/raj/destinationhttps
+        os_type: windows
        os_deployment_timeout: 15
