--- a/idrac_os_deployment_http.yml
+++ b/idrac_os_deployment_http.yml
@@ -8,6 +8,9 @@
        username: "{{ user }}"
        password: "{{ password }}"
        validate_certs: false
+       os_name: esxi
+       os_version: 8
+       esxi_rootpw: Test_123
        source:
         protocol: http
         hostname: "{{ source_hostname }}"
