--- a/idrac_os_deployment_https.yml
+++ b/idrac_os_deployment_https.yml
@@ -12,12 +12,12 @@
        os_version: 8
        esxi_rootpw: Test_123
        source:
-        protocol: http
+        protocol: https
         hostname: "{{ source_hostname }}"
         iso_path: /omam/raj/sourcehttps
         iso_name: VMware-VMvisor-Installer-8.0.0-20513097.x86_64-Dell_Customized-A00.iso
        destination:
-        protocol: http
+        protocol: https
         hostname: "{{ destination_hostname }}"
         iso_path: /omam/raj/destinationhttps
         mountpoint: C:/omam_test/omam/raj/destinationhttps
